--- a/css/build.css
+++ b/css/build.css
@@ -21,17 +21,6 @@
 	cursor: pointer;
 }
 
-.list.list-thumb-s ul > li .list-image img {
-	position: absolute;
-	margin: auto;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	max-height: 100%;
-	max-width: 100%;
-}
-
 .list.list-thumb-s ul > li .list-title {
 	font-size: 1em;
 	font-weight: 600;
@@ -77,6 +66,9 @@
 	left: 0;
 	top: 50%;
 	margin-top: -23px;
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .list.list-thumb-s ul > li.linked:after {
