--- a/css/interface.css
+++ b/css/interface.css
@@ -127,7 +127,7 @@ header a {
 }
 
 .tab-content {
-  padding: 0;
+  padding: 15px 0 0;
 }
 
 .tab-pane-content {
@@ -242,6 +242,11 @@ header a {
 .panels-empty {
   text-align: center;
   margin-bottom: 40px;
+  display: none;
+}
+
+.list-items-empty .panels-empty {
+  display: block;
 }
 
 .controls {
@@ -324,6 +329,42 @@ textarea.form-control {
 
 .input-group-addon {
   border-radius: 6px;
+}
+
+.radio input {
+  display: none;
+}
+
+.radio {
+  float: left;
+}
+
+.radio label {
+  position: relative;
+  height: 44px;
+  line-height: 44px;
+  border: 1px solid #e4e9eb;
+  border-radius: 0;
+  background-color: #FFFFFF;
+  padding: 0 15px;
+  margin-left: 0;
+  margin-bottom: 0;
+}
+
+.radio:first-child label {
+  border-right: none;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+}
+
+.radio:last-child label {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.radio input[type="radio"]:checked + label {
+  background-color: #00abd2;
+  color: #FFF;
 }
 
 .linked-to {
