--- a/css/build.css
+++ b/css/build.css
@@ -15,13 +15,12 @@
 }
 
 .list.list-thumb-s ul > li.linked {
-	padding-right: 44px;
+	padding-right: 22px;
 	cursor: pointer;
 }
 
 .list.list-thumb-s ul > li .list-title {
 	font-size: 1em;
-	font-weight: 600;
 	margin: 0;
 }
 
@@ -30,7 +29,9 @@
 }
 
 .list.list-thumb-s ul > li .list-title + p {
-	margin-top: 0.5em;
+	margin-top: 0.2em;
+    color: rgba(51,51,51,0.5);
+    font-size: 14px;
 }
 
 .list.list-thumb-s ul > li .list-title:empty + p {
@@ -43,14 +44,18 @@
 
 .list.list-thumb-s ul > li {
 	list-style: none;
-	border-bottom: 1px solid rgba(51,51,51,0.2);
 	padding: 10px 10px 10px 62px;
+	margin-bottom: 10px;
 	position: relative;
 	min-height: 56px;
 	display: flex;
 	justify-content: center;
 	align-content: center;
 	flex-direction: column;
+}
+
+.list.list-thumb-s ul > li:last-child {
+	margin-bottom: 0;
 }
 
 .list.list-thumb-s ul > li .list-swipe-wrapper {
@@ -67,21 +72,23 @@
 	background-position: center center;
 	background-size: cover;
 	background-repeat: no-repeat;
+	border-radius: 10px;
+	box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 .list.list-thumb-s ul > li.linked:after {
 	content: "\f105";
 	font: normal normal normal 14px/1 FontAwesome;
 	position: absolute;
-	width: 44px;
+	width: 22px;
 	height: 44px;
 	top: 50%;
 	right: 0;
 	margin-top: -22px;
-	color: #333;
-	font-size: 34px;
+	color: rgba(51, 51, 51, 0.4);
+	font-size: 26px;
 	line-height: 44px;
-	text-align: center;
+	text-align: right;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
