--- a/css/build.css
+++ b/css/build.css
@@ -69,6 +69,18 @@
 	background-repeat: no-repeat;
 }
 
+.list.list-thumb-s ul > li .list-image .fl-list-icon {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 30px;
+}
+
 .list.list-thumb-s ul > li.linked:after {
 	content: "\f105";
 	font: normal normal normal 14px/1 FontAwesome;
