--- a/css/build.css
+++ b/css/build.css
@@ -81,14 +81,9 @@
 	font-size: 30px;
 }
 
-.list.list-thumb-s ul > li .list-icon {
-	display: none;
-}
-
-.list.list-thumb-s ul > li.linked .list-icon {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.list.list-thumb-s ul > li.linked:after {
+	content: "\f105";
+	font: normal normal normal 14px/1 FontAwesome;
 	position: absolute;
 	width: 44px;
 	height: 44px;
